--- a/style.css
+++ b/style.css
@@ -53,4 +53,6 @@ h1 {
 .name {
   color: #003A70;
   margin-bottom: 0;
+  /* text-transform: uppercase; */ 
+  /* Took care of uppercasing in JS line 18 but could also do it here */
 }
